tests/spec/build/snapshots/multimodule_deep_nested_path.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/nested/deep/module"

func main() {
	_ = module.Foo()
}


// === nested/deep/module/mod.go ===
package module

func Foo() int {
	return 42
}
