tests/spec/build/snapshots/multimodule_enum_static_method.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/shapes"

func main() {
	c := shapes.Color_Default()
	_ = c
}


// === shapes/mod.go ===
package shapes

import "fmt"

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorGreen() Color {
	return Color{Tag: ColorGreen}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag int

const (
	ColorRed ColorTag = iota
	ColorGreen
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

func (c Color) String() string {
	switch c.Tag {
	case ColorRed:
		return "Red"
	case ColorGreen:
		return "Green"
	case ColorBlue:
		return "Blue"
	default:
		return fmt.Sprintf("Color(%d)", c.Tag)
	}
}

func (c Color) GoString() string {
	switch c.Tag {
	case ColorRed:
		return "Color.Red"
	case ColorGreen:
		return "Color.Green"
	case ColorBlue:
		return "Color.Blue"
	default:
		return fmt.Sprintf("Color(%d)", c.Tag)
	}
}

func Color_Default() Color {
	return MakeColorRed()
}
