tests/spec/build/snapshots/multimodule_if_let_in_dependency.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"github.com/user/myproject/utils"
)

func main() {
	_ = utils.UnwrapOrDefault(lisette.MakeOptionSome(42))
}


// === utils/lib.go ===
package utils

import lisette "github.com/ivov/lisette/prelude"

func UnwrapOrDefault(opt lisette.Option[int]) int {
	if opt.Tag == lisette.OptionSome {
		x := opt.SomeVal
		return x
	}
	return 0
}
