tests/spec/build/snapshots/multimodule_intra_module_function_call.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/math_utils"

func main() {
	_ = math_utils.Double_square(3.0)
}


// === math_utils/lib.go ===
package math_utils

func Square(x float64) float64 {
	return x * x
}

func Double_square(x float64) float64 {
	return Square(x) * 2.0
}
